# batch-reqwest

./: Cargo.toml
src/: main.rs
src/utils/: mod.rs
