[package]
name    = "batch-reqwest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow       = "1.0.98"
clap         = { version = "4.5.39", features = ["derive"] }
csv          = "1.3.1"
env_logger   = "0.11.8"
itertools    = "0.14.0"
jsonpath_lib = "0.3.0"
log          = "0.4.27"
reqwest      = "0.12.19"
serde        = { version = "1.0.219", features = ["derive"] }
serde_json   = "1.0.140"
tokio        = { version = "1.45.1", features = ["full"] }
